--- a/index.html
+++ b/index.html
@@ -13,21 +13,24 @@
 </head>
 <body>
 
+    <div class="container">
+        <div class="header">
+            <ul class="breadcrumbs">
+                <li>Список фильмов</li>
+                <li>2023</li>
+            </ul>
+            <h1>Посмотреть</h1>
+        </div>    
+        <div class="box">
+            <div class="box__input">
+                <input class="js-movie-input movie-input" type="text" placeholder="Введите название фильма">
+                <div class="js-add-movie-btn add-movie-btn"></div>
+            </div>
+            <ul class="js-movies">
 
-    <ul class="breadcrumbs">
-        <li>Список фильмов</li>
-        <li>2023</li>
-    </ul>
-    <h1>Посмотреть</h1>
-    <div class="box">
-        <div class="box__input">
-            <input class="js-movie-input movie-input" type="text" placeholder="Введите название фильма">
-            <button class="js-add-movie-btn add-movie-btn"></button>
+            </ul>
+
         </div>
-        <ul class="js-movies">
-
-        </ul>
-
     </div>
 
     <script src="index.js"></script>
